--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,20 @@ body {
 
 }
 
-
-
-
 .container{
   max-width: 1024px;
   margin: 20px auto;
   padding: 0px, 5px;
   color: black;
-
-
 }
 
 
 #login{
   text-align: center;
+}
+
+#error{
+    color: red;
 }
 
 .form-signin {
