--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@
   
   .container{
     max-width: 1024px;
-    margin: 20px auto;
+    margin: 20px auto 0;
     padding: 0px 5px;
     color: black;
   }
