--- a/css/style.css
+++ b/css/style.css
@@ -446,8 +446,8 @@
   
   /*Top Navigation */
   .nav {
-    height: 50px;
-    /* Set Height when login/sign up displays inline */
+    /*height: 50px;
+    Set Height when login/sign up displays inline */
     
   }
   
@@ -655,8 +655,8 @@
   
   /*Top Navigation */
   .nav {
-    height: 50px;
-    /* Set Height when login/sign up displays inline */
+    /*height: 50px;
+    Set Height when login/sign up displays inline */
     
   }
   
