--- a/css/style.css
+++ b/css/style.css
@@ -857,6 +857,7 @@
   
   .footer section {
     background: none;
+    padding:
   }
   
   .footer h2, p {
@@ -864,28 +865,31 @@
   }
   
   .footer h2 {
-    font-size: 28px;
+    font-size: 16px;
   }
   
   .footer h3 {
     color: #FFFFFF;
-    font-size: 16px;
+    font-size: 12px;
   }
   
   .footer p {
-    font-size: 12px;
+    font-size: 10px;
     
   }
   
   .footer img {
+    margin-top:10px;
+    margin-bottom:10px;
     width: 60px;
     height: 60px;
+    
   }
   
   #details {
-    float:right;
-    margin-top: -20px;
-    margin-right: 15px;
+    padding-right:10px;
+    margin-top: 0px;
+    margin-right: 0px;
     
   }
   
