--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,11 @@
     border-radius: 4px;
   }
   
+  /*Table Stuff */
+  #view-order p {
+    color:black;
+  }
+  
   /*Footer */
   .footer {
     position: relative;
