--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+.footer h2,.footer p {
+	color:#FFFFFF;
+}
+
 /* DESKTOP */
 @media (min-width: 1200px) {
     body {
@@ -173,7 +177,6 @@
 	Greg commented this out, section is just used to divide the page
 	into semantic sections, it should probably just be the same colour as the body.
     background-color: #D88A7A;*/
-     background-color: #ffffff;
     border-radius: 4px;
   }
   
@@ -193,13 +196,6 @@
   
   .footer section {
     background: none;
-  }
-  
-  .footer h2, p {
-    /*color:#FFFFFF;
-	Greg commented this out, currently
-	most of our backgrounds are white so black text makes more sense.
-    */
   }
   
   .footer h2 {
@@ -405,7 +401,6 @@
     /*Greg commented this out, section is just used to divide the page
 	into semantic sections, it should probably just be the same colour as the body.
     background-color: #D88A7A;*/
-     background-color: #ffffff;
     border-radius: 4px;
   }
   
@@ -420,13 +415,6 @@
   
   .footer section {
     background: none;
-  }
-  
-  .footer h2, p {
-    /*color:#FFFFFF;
-	Greg commented this out, currently
-	most of our backgrounds are white so black text makes more sense.
-    */
   }
   
   .footer h2 {
@@ -650,13 +638,6 @@
   
   .footer section {
     background: none;
-  }
-  
-  .footer h2, p {
-    /*color:#FFFFFF;
-	Greg commented this out, currently
-	most of our backgrounds are white so black text makes more sense.
-    */
   }
   
   .footer h2 {
@@ -885,13 +866,6 @@
     padding:
   }
   
-  .footer h2, p {
-    /*color:#FFFFFF;
-	Greg commented this out, currently
-	most of our backgrounds are white so black text makes more sense.
-    */
-  }
-  
   .footer h2 {
     font-size: 16px;
   }
@@ -928,4 +902,9 @@
     overflow:hidden;
   }
 
+}
+
+
+.footer p {
+	/*color: #ffffff;*/
 }
