--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@
     background-color:#b30000
   
   }
+  
+  
 
   .container{
     max-width: 1024px;
@@ -172,12 +174,82 @@
     margin: auto;
   }
   
+  /* Order and Phone Banner */
+  #shortcut1 {
+  max-width: 900px;
+  width: 800px;
+  height: 100px;
+  margin-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Order Icon 1 */
+#shortcut3 {
+  width: 70px;
+  height: 70px;
+  margin-left: 40%;
+  display: block;
+  float: left;
+}
+
+/* Order Icon 2,3,4 */
+#shortcut2 {
+  width: 70px;
+  height: 70px;
+  margin-left: 40%;
+  display: block;
+  float: left;
+  margin-top: 20%;
+}
+
+/* Form CSS */
+.form-group {
+  margin-left: 17%;
+  margin-right: 3%;
+}
+.row1 {
+  padding-top: 10%;
+}
+
+/*Form Submit Button */
+  .btnbtn-default{
+  max-width: 900px;
+  width: 800px;
+  height: 100px;
+  margin-top: 5%;
+  margin-bottom: -50%;
+  margin-right: 5%;
+  margin-left: 5%;
+  background-color:#010326;
+  color: white;
+}
+
+/* Form pink box */
+  .container1{
+    max-width: 900px;
+    background-color:#D88A7A;
+    margin: -50px auto 0;
+    padding: 0px 5px;
+    margin-bottom: 20%
+  }
+
   section {
     /*
 	Greg commented this out, section is just used to divide the page
 	into semantic sections, it should probably just be the same colour as the body.
     background-color: #D88A7A;*/
     border-radius: 4px;
+  }
+  
+  /* Form pink box */
+  .container1{
+    max-width: 900px;
+    background-color:#D88A7A;
+    margin: -50px auto 0;
+    padding: 0px 5px;
+    margin-bottom: 20%
   }
   
   /*Table Stuff */
