Updated View Order Detail Headings Colours
Updated View Order Detail Headings Colours

--- a/css/style.css
+++ b/css/style.css
@@ -252,9 +252,14 @@
   }
   
   /*View Order */
-  #filter-order h2 h3 {
+  .form-group h2 {
    color: #8C1B16;
   }
+  
+  #filter-order h3 {
+   color: #8C1B16;
+  }
+  
   
 
   
