--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@
 /*Create order and edit order box*/
 .container2{
       background-color:#F2D5A0;
-      margin-top: -66%;
+      margin-top:  -888px;
       margin-left: 35%;
       margin-right: 20%;
       padding: 0px 5px;
