Fixed navigation bar button hover colour. (Set to same Logo Button hover colour)

--- a/bootstrap-3.3.7/docs/examples/navbar/navbar.css
+++ b/bootstrap-3.3.7/docs/examples/navbar/navbar.css
@@ -15,3 +15,8 @@ body {
 .navbar-right {
   margin-right: -50px;
 }
+
+/*Navagational bar buttons hover-over colour set to same Logo Button hover colour */
+.nav>li>a:focus, .nav>li>a:hover {
+  background-color: #8C1B16;
+}
