Fixed left navigational menu buttons link colour to display #fff (White)

--- a/bootstrap-3.3.7/docs/examples/navbar/navbar.css
+++ b/bootstrap-3.3.7/docs/examples/navbar/navbar.css
@@ -6,9 +6,10 @@ body {
   margin-bottom: 20px;
 }
 
-/*Middle Allign Text in Right Navigational Bar*/
+/*Middle Allign Text in Right Navigational Bar & Fixes Nav menu buttons colour*/
 .nav>li>a {
   padding: 15px;
+  color: #fff;
 }
 
 /*Removes margin space on the right of the Right Navigational Bar*/
