--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@
 	color:#FFFFFF;
 }
 
+.pusher {
+  height: 120px;
+}
+
+.containerDriver{
+      background-color:#F2D5A0;
+}
+
 /* DESKTOP */
 @media (min-width: 1200px) {
     body {
@@ -175,38 +183,38 @@
 
   /* Order and Phone Banner */
   #shortcut1 {
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-/* Order Icon 1 */
-#shortcut3 {
-  width: 70px;
-  height: 70px;
-  margin-left: 40%;
-  display: block;
-  float: left;
-}
+  /* Order Icon 1 */
+  #shortcut3 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
+  }
 
-/* Order Icon 2,3,4 */
-#shortcut2 {
-  width: 70px;
-  height: 70px;
-  margin-left: 40%;
-  display: block;
-  float: left;
-  margin-top: 20%;
-}
-/*Order Buttons */
-.add_field_button {
- margin-left:20%;
- margin-bottom:10px;
- padding:5px;
+  /* Order Icon 2,3,4 */
+  #shortcut2 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
+    margin-top: 20%;
+  }
+  /*Order Buttons */
+  .add_field_button {
+    margin-left:20%;
+    margin-bottom:10px;
+    padding:5px;
   }
 
  .remove_field{
@@ -214,82 +222,82 @@
 
   }
 
-/* Create create acc and edit acc background image*/
-#im {
-      width: 900px;
-      height: 1000px;
-      display: block;
-      margin-left: auto;
-      position:relative;
-      margin-top: 0;
-      margin-right: auto;
-      z-index: -1;
-}
-/*Create order and edit order box*/
-.container2{
-      background-color:#F2D5A0;
-      margin-top:  -888px;
-      margin-left: 35%;
-      margin-right: 20%;
-      padding: 0px 5px;
-      margin-bottom: 20%;
-}
-/*Form css edit and create*/
-.form-group1 {
-    margin-left: 3%;
+  /* Create create acc and edit acc background image*/
+  #im {
+    width: 900px;
+    height: 1000px;
+    display: block;
+    margin-left: auto;
+    position:relative;
+    margin-top: 0;
+    margin-right: auto;
+    z-index: -1;
+  }
+  /*Create order and edit order box*/
+  .container2{
+    background-color:#F2D5A0;
+    margin-top:  -888px;
+    margin-left: 35%;
+    margin-right: 20%;
+    padding: 0px 5px;
+    margin-bottom: 20%;
+  }
+  /*Form css edit and create*/
+  .form-group1 {
+      margin-left: 3%;
+      margin-right: 3%;
+      color: #BA2020;
+  }
+
+  /* Form CSS */
+  .form-group {
+    margin-left: 17%;
     margin-right: 3%;
+  }
+
+  /*Text */
+  .texts {
+    margin-left: 3%;
     color: #BA2020;
-}
-
-/* Form CSS */
-.form-group {
-  margin-left: 17%;
-  margin-right: 3%;
-}
-
-/*Text */
-.texts {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  }
 
 
-.texts2 {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  .texts2 {
+    margin-left: 3%;
+    color: #BA2020;
+  }
 
-/*Summit button*/
-.btn1btn-default {
+  /*Summit button*/
+  .btn1btn-default {
 
-  width: 160px;
-  height: 40px;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  margin-right: 5%;
-  margin-left: 70%;
-  background-color:#BA2020;
-  color: white;
-}
+    width: 160px;
+    height: 40px;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-right: 5%;
+    margin-left: 70%;
+    background-color:#BA2020;
+    color: white;
+  }
 
-.row1 {
-  padding-top: 10%;
-}
+  .row1 {
+    padding-top: 10%;
+  }
 
-/*Form Submit Button */
+  /*Form Submit Button */
   .btnbtn-default{
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 5%;
-  margin-bottom: -50%;
-  margin-right: 5%;
-  margin-left: 5%;
-  background-color:#010326;
-  color: white;
-}
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 5%;
+    margin-bottom: -50%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color:#010326;
+    color: white;
+  }
 
-/* Form pink box */
+  /* Form pink box */
   .container1{
     max-width: 900px;
     background-color:#D88A7A;
@@ -382,7 +390,7 @@
 
 }
 
-/* PORTRAIT TABLET */
+/* LANDSCAPE TABLET */
 @media (min-width: 768px) and (max-width: 1199px) {
     body {
     font-family:helvetica;
@@ -542,123 +550,123 @@
     margin: auto;
   }
   /* Order and Phone Banner */
-  #shortcut1 {
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Order Icon 1 */
-  #shortcut3 {
-	width: 70px;
-	height: 70px;
-	margin-left: 40%;
-	display: block;
-	float: left;
+    #shortcut1 {
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-/* Order Icon 2,3,4 */
-  #shortcut2 {
-	width: 70px;
-	height: 70px;
-	margin-left: 40%;
-	display: block;
-	float: left;
-	margin-top: 20%;
+  /* Order Icon 1 */
+    #shortcut3 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
   }
 
-  /*Order Buttons */
-  .add_field_button {
-   margin-left:20%;
-   margin-bottom:10px;
-   padding:5px;
-	}
+  /* Order Icon 2,3,4 */
+    #shortcut2 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
+    margin-top: 20%;
+  }
 
- .remove_field{
-  margin-left:20%;
+    /*Order Buttons */
+    .add_field_button {
+    margin-left:20%;
+    margin-bottom:10px;
+    padding:5px;
+  }
+
+  .remove_field{
+    margin-left:20%;
 
   }
 
   /* Create create acc and edit acc background image*/
-#im {
-      width: 900px;
-      height: 1000px;
-      display: block;
-      margin-left: auto;
-      position:relative;
-      margin-top: 0;
-      margin-right: auto;
-      z-index: -1;
-}
-/*Create order and edit order box*/
-.container2{
-      background-color:#F2D5A0;
-      margin-top:  -888px;
-      margin-left: 35%;
-      margin-right: 20%;
-      padding: 0px 5px;
-      margin-bottom: 20%;
-}
-/*Form css edit and create*/
-.form-group1 {
-    margin-left: 3%;
+  #im {
+        width: 900px;
+        height: 1000px;
+        display: block;
+        margin-left: auto;
+        position:relative;
+        margin-top: 0;
+        margin-right: auto;
+        z-index: -1;
+  }
+  /*Create order and edit order box*/
+  .container2{
+        background-color:#F2D5A0;
+        margin-top:  -888px;
+        margin-left: 35%;
+        margin-right: 20%;
+        padding: 0px 5px;
+        margin-bottom: 20%;
+  }
+  /*Form css edit and create*/
+  .form-group1 {
+      margin-left: 3%;
+      margin-right: 3%;
+      color: #BA2020;
+  }
+
+  /* Form CSS */
+  .form-group {
+    margin-left: 17%;
     margin-right: 3%;
+  }
+
+  /*Text */
+  .texts {
+    margin-left: 3%;
     color: #BA2020;
-}
-
-/* Form CSS */
-.form-group {
-  margin-left: 17%;
-  margin-right: 3%;
-}
-
-/*Text */
-.texts {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  }
 
 
-.texts2 {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  .texts2 {
+    margin-left: 3%;
+    color: #BA2020;
+  }
 
-/*Summit button*/
-.btn1btn-default {
+  /*Summit button*/
+  .btn1btn-default {
 
-  width: 160px;
-  height: 40px;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  margin-right: 5%;
-  margin-left: 70%;
-  background-color:#BA2020;
-  color: white;
-}
+    width: 160px;
+    height: 40px;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-right: 5%;
+    margin-left: 70%;
+    background-color:#BA2020;
+    color: white;
+  }
 
-.row1 {
-  padding-top: 10%;
-}
+  .row1 {
+    padding-top: 10%;
+  }
 
-/*Form Submit Button */
-  .btnbtn-default{
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 5%;
-  margin-bottom: -50%;
-  margin-right: 5%;
-  margin-left: 5%;
-  background-color:#010326;
-  color: white;
-}
+  /*Form Submit Button */
+    .btnbtn-default{
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 5%;
+    margin-bottom: -50%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color:#010326;
+    color: white;
+  }
 
-/* Form pink box */
+  /* Form pink box */
   .container1{
     max-width: 900px;
     background-color:#D88A7A;
@@ -744,9 +752,9 @@
 
 }
 
-/* LANDSCAPE TABLET */
+/* PORTRAIT TABLET */
 @media (max-width: 767px) {
-    body {
+  body {
     font-family:helvetica;
     font-size: 12px;
     padding-top: 40px;
@@ -910,121 +918,121 @@
 
   /* Order and Phone Banner */
   #shortcut1 {
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Order Icon 1 */
-#shortcut3 {
-  width: 70px;
-  height: 70px;
-  margin-left: 40%;
-  display: block;
-  float: left;
-}
-
-/* Order Icon 2,3,4 */
-#shortcut2 {
-  width: 70px;
-  height: 70px;
-  margin-left: 40%;
-  display: block;
-  float: left;
-  margin-top: 20%;
-}
-/*Order Buttons */
-.add_field_button {
- margin-left:20%;
- margin-bottom:10px;
- padding:5px;
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
- .remove_field{
+  /* Order Icon 1 */
+  #shortcut3 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
+  }
+
+  /* Order Icon 2,3,4 */
+  #shortcut2 {
+    width: 70px;
+    height: 70px;
+    margin-left: 40%;
+    display: block;
+    float: left;
+    margin-top: 20%;
+  }
+  /*Order Buttons */
+  .add_field_button {
   margin-left:20%;
+  margin-bottom:10px;
+  padding:5px;
+    }
 
+  .remove_field{
+    margin-left:20%;
+
+    }
+
+  /* Create create acc and edit acc background image*/
+  #im {
+        width: 900px;
+        height: 1000px;
+        display: block;
+        margin-left: auto;
+        position:relative;
+        margin-top: 0;
+        margin-right: auto;
+        z-index: -1;
+  }
+  /*Create order and edit order box*/
+  .container2{
+        background-color:#F2D5A0;
+        margin-top:  -888px;
+        margin-left: 35%;
+        margin-right: 20%;
+        padding: 0px 5px;
+        margin-bottom: 20%;
+  }
+  /*Form css edit and create*/
+  .form-group1 {
+      margin-left: 3%;
+      margin-right: 3%;
+      color: #BA2020;
   }
 
-/* Create create acc and edit acc background image*/
-#im {
-      width: 900px;
-      height: 1000px;
-      display: block;
-      margin-left: auto;
-      position:relative;
-      margin-top: 0;
-      margin-right: auto;
-      z-index: -1;
-}
-/*Create order and edit order box*/
-.container2{
-      background-color:#F2D5A0;
-      margin-top:  -888px;
-      margin-left: 35%;
-      margin-right: 20%;
-      padding: 0px 5px;
-      margin-bottom: 20%;
-}
-/*Form css edit and create*/
-.form-group1 {
-    margin-left: 3%;
+  /* Form CSS */
+  .form-group {
+    margin-left: 17%;
     margin-right: 3%;
+  }
+
+  /*Text */
+  .texts {
+    margin-left: 3%;
     color: #BA2020;
-}
-
-/* Form CSS */
-.form-group {
-  margin-left: 17%;
-  margin-right: 3%;
-}
-
-/*Text */
-.texts {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  }
 
 
-.texts2 {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  .texts2 {
+    margin-left: 3%;
+    color: #BA2020;
+  }
 
-/*Summit button*/
-.btn1btn-default {
+  /*Summit button*/
+  .btn1btn-default {
 
-  width: 160px;
-  height: 40px;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  margin-right: 5%;
-  margin-left: 70%;
-  background-color:#BA2020;
-  color: white;
-}
+    width: 160px;
+    height: 40px;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-right: 5%;
+    margin-left: 70%;
+    background-color:#BA2020;
+    color: white;
+  }
 
-.row1 {
-  padding-top: 10%;
-}
+  .row1 {
+    padding-top: 10%;
+  }
 
-/*Form Submit Button */
-  .btnbtn-default{
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 5%;
-  margin-bottom: -50%;
-  margin-right: 5%;
-  margin-left: 5%;
-  background-color:#010326;
-  color: white;
-}
+  /*Form Submit Button */
+    .btnbtn-default{
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 5%;
+    margin-bottom: -50%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color:#010326;
+    color: white;
+  }
 
-/* Form pink box */
+  /* Form pink box */
   .container1{
     max-width: 900px;
     background-color:#D88A7A;
@@ -1280,46 +1288,46 @@
 
   /* Order and Phone Banner */
   #shortcut1 {
-  width: 250px;
-  height: 50px;
-  margin-top: 0px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+    width: 250px;
+    height: 50px;
+    margin-top: 0px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-/* Order Icon 1 */
-#shortcut3 img {
-  width: 35px;
-  height: 35px;
-  margin-left: 5%;
-  display: block;
-  float: left;
-}
+  /* Order Icon 1 */
+  #shortcut3 img {
+    width: 35px;
+    height: 35px;
+    margin-left: 5%;
+    display: block;
+    float: left;
+  }
 
-/* Order Icon 2,3,4 */
-#shortcut2 img {
-  width: 35px;
-  height: 35px;
-  margin-left: 5%;
-  display: block;
-  float: left;
-  margin-top: 20%;
-}
-/*Order Buttons */
-.add_field_button {
- margin-left:20%;
- margin-bottom:10px;
- padding:5px;
+  /* Order Icon 2,3,4 */
+  #shortcut2 img {
+    width: 35px;
+    height: 35px;
+    margin-left: 5%;
+    display: block;
+    float: left;
+    margin-top: 20%;
+  }
+  /*Order Buttons */
+  .add_field_button {
+    margin-left:20%;
+    margin-bottom:10px;
+    padding:5px;
   }
 
  .remove_field{
-  margin-left:20%;
+    margin-left:20%;
 
   }
 
-/* Create create acc and edit acc background image*/
-#im {
+  /* Create create acc and edit acc background image*/
+  #im {
       width: 900px;
       height: 1000px;
       display: block;
@@ -1328,72 +1336,72 @@
       margin-top: 0;
       margin-right: auto;
       z-index: -1;
-}
-/*Create order and edit order box*/
-.container2{
+  }
+  /*Create order and edit order box*/
+  .container2{
       background-color:#F2D5A0;
       margin-top:  -888px;
       margin-left: 35%;
       margin-right: 20%;
       padding: 0px 5px;
       margin-bottom: 20%;
-}
-/*Form css edit and create*/
-.form-group1 {
-    margin-left: 3%;
+  }
+  /*Form css edit and create*/
+  .form-group1 {
+      margin-left: 3%;
+      margin-right: 3%;
+      color: #BA2020;
+  }
+
+  /* Form CSS */
+  .form-group {
+    margin-left: 17%;
     margin-right: 3%;
+  }
+
+  /*Text */
+  .texts {
+    margin-left: 3%;
     color: #BA2020;
-}
-
-/* Form CSS */
-.form-group {
-  margin-left: 17%;
-  margin-right: 3%;
-}
-
-/*Text */
-.texts {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  }
 
 
-.texts2 {
-  margin-left: 3%;
-  color: #BA2020;
-}
+  .texts2 {
+    margin-left: 3%;
+    color: #BA2020;
+  }
 
-/*Summit button*/
-.btn1btn-default {
+  /*Summit button*/
+  .btn1btn-default {
 
-  width: 160px;
-  height: 40px;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  margin-right: 5%;
-  margin-left: 70%;
-  background-color:#BA2020;
-  color: white;
-}
+    width: 160px;
+    height: 40px;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-right: 5%;
+    margin-left: 70%;
+    background-color:#BA2020;
+    color: white;
+  }
 
-.row1 {
-  padding-top: 10%;
-}
+  .row1 {
+    padding-top: 10%;
+  }
 
-/*Form Submit Button */
-  .btnbtn-default{
-  max-width: 900px;
-  width: 800px;
-  height: 100px;
-  margin-top: 5%;
-  margin-bottom: -50%;
-  margin-right: 5%;
-  margin-left: 5%;
-  background-color:#010326;
-  color: white;
-}
+  /*Form Submit Button */
+    .btnbtn-default{
+    max-width: 900px;
+    width: 800px;
+    height: 100px;
+    margin-top: 5%;
+    margin-bottom: -50%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color:#010326;
+    color: white;
+  }
 
-/* Form pink box */
+  /* Form pink box */
   .container1{
     max-width: 900px;
     background-color:#D88A7A;
